; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_iirfilter.c_ff_iir_filter_init.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_iirfilter.c_ff_iir_filter_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@ff_iir_filter_flt = common dso_local global i32 0, align 4
@HAVE_MIPSFPU = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_iir_filter_init(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %3 = load i32, i32* @ff_iir_filter_flt, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  store i32 %3, i32* %5, align 4
  %6 = load i64, i64* @HAVE_MIPSFPU, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %10 = call i32 @ff_iir_filter_init_mips(%struct.TYPE_4__* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @ff_iir_filter_init_mips(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
